--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lucide-react": "^0.456.0",
     "mediasoup-client": "^3.7.17",
     "next": "15.0.3",
-    "next-auth": "^4.24.10",
+    "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.3",
     "react": "18",
     "react-dom": "18",
