--- a/package.json
+++ b/package.json
@@ -10,11 +10,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@heroicons/react": "^2.2.0",
     "@prisma/client": "^5.22.0",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.4",
+    "@tabler/icons-react": "^3.26.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "daisyui": "^4.12.23",
+    "framer-motion": "^11.15.0",
+    "heroicons": "^2.2.0",
     "lucide-react": "^0.456.0",
     "mediasoup-client": "^3.7.17",
     "next": "15.0.3",
@@ -22,9 +34,11 @@
     "next-themes": "^0.4.3",
     "react": "18",
     "react-dom": "18",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.4.0",
     "react-player": "^2.16.0",
     "socket.io-client": "^4.8.1",
-    "tailwind-merge": "^2.5.4",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.3"
   },
